<resources>
    <string name="app_name">Treadmill</string>
    <string name="space">&#160;</string>
    <string name="tab_bind_gym">绑定场馆</string>
    <string name="tab_setup">启动设置</string>
    <string name="tab_network">网络设置</string>
    <string name="step_2">STEP 2</string>
    <string name="run_start_setting">跑步机启动设置</string>
    <string name="run_await_action">刷手环开启跑步机</string>
    <string name="update_check_version">正在检查更新</string>
    <string name="update_install">正在安装更新</string>
    <string name="update_download_install">已完成下载，更新中&#8230;</string>
    <string name="update_fail">更新失败</string>
    <string name="update_none">已经是最新版本</string>
    <string name="run_welcom_hint">Hello,欢迎使用Liking Fit 智能跑步机</string>
    <string name="this_run_finish">本次锻炼完成</string>
    <string name="this_run_attainment_target">恭喜你，目标达成</string>
    <string name="bind_gym_success_hint">完成设置，正在为您跳转&#8230;</string>
    <string name="read_card_error">读卡失败！</string>
    <string name="start_mode_set_txt">设定目标</string>
    <string name="start_mode_quick_start_txt">快速启动</string>
    <string name="goalsetting_step_run_time">时间</string>
    <string name="goalsetting_step_kilometre">公里</string>
    <string name="goalsetting_step_kcal">热量</string>
    <string name="goalsetting_step_mode_time">设定运动时间(min)</string>
    <string name="goalsetting_step_mode_kcl">设定消耗卡路里(Kcal)</string>
    <string name="goalsetting_step_mode_kilometre">设定运动距离(km)</string>
    <string name="goalsetting_step_setting_hint1">点击&#160;&#160;&#160;&#160;选择设定目标类型&#160;&#160;&#160;&#160;&#160;&#160;再点击&#160;&#160;&#160;&#160;确认选定</string>
    <string name="goalsetting_step_setting_hint2">点击&#160;&#160;&#160;&#160;返回上一页</string>
    <string name="goalsetting_step_mode_hint1_part1">通过点击坡度&#160;&#160;&#160;&#160;&#160;&#160;&#160;以</string>
    <string name="goalsetting_step_mode_hint1_part2">上下调整，点击速度&#160;&#160;&#160;&#160;&#160;&#160;&#160;以</string>
    <string name="goalsetting_step_mode_hint1_part3">上下调整</string>
    <string name="goalsetting_step_mode_hint2">设定完成后点击&#160;&#160;&#160;&#160;开始锻炼</string>
    <string name="goalsetting_step_mode_hint3">点击&#160;&#160;&#160;&#160;返回上一页重新选择目标</string>
    <!--<![CDATA[完成目标<font color="#25ff8c"><b>%s</b></font>，]]>-->
    <string name="run_result_unfinished_txt_hint"><Data>下次继续挑战吧!</Data></string>
    <string name="run_thread_set_txt">即将为您将%1$s调整为%2$s</string>
    <!--<string name="threadmill_standby_time_hint_txt">在跑步机未运行暂停画面或者跑步机运行中空跑的情况下</string>-->
    <string name="threadmill_standby_time_hint_txt">在跑步机未运行暂停画面的情况下</string>
    <string name="threadmill_standby_time_title_txt">待机时间设置</string>
    <string name="threadmill_standby_time_operate1_txt">点击坡度&#160;&#160;&#160;&#160;&#160;&#160;&#160;设定待机时间</string>
    <string name="threadmill_standby_time_operate2_txt">设定完成后，点击&#160;&#160;&#160;&#160;返回上一页</string>
    <string name="start_user_info_txt">您的运动消耗数据会依据您App中的个人数据进行分析</string>
    <string name="threadmill_motion_param_title_txt">运动参数设置</string>
    <string name="threadmill_motion_param_maxtime_txt">设定运动时间(分钟)</string>
    <string name="threadmill_motion_param_maxtime_hint_txt">点击坡度&#160;&#160;&#160;&#160;&#160;&#160;&#160;以10分钟上下调整运动时间</string>
    <string name="threadmill_system_update_title_txt">系统版本</string>
    <string name="threadmill_system_update_newest_txt">当前系统已是最新版本</string>
    <string name="threadmill_system_update_operate_txt">点击&#160;&#160;&#160;&#160;返回上一页</string>
    <string name="threadmill_setting_description_txt">点击&#160;&#160;&#160;&#160;&#160;&#160;&#160;选择设置项，再点击&#160;&#160;&#160;&#160;确认选定</string>
    <string name="setting_start_mode">启动方式</string>
    <string name="setting_await_time">待机时间</string>
    <string name="setting_sport_params">运动参数</string>
    <string name="setting_user_setting">默认用户设置</string>
    <string name="setting_gym_binding">绑定场馆</string>
    <string name="setting_network_connection">网络连接</string>
    <string name="setting_update">系统更新</string>
    <string name="setting_language">语言</string>
    <string name="run_attainment_target_upcoming">再%s就达成目标了，加油！</string>
    <string name="threadmill_network_setting_operate_txt">点击&#160;&#160;&#160;&#160;进入下一步</string>
    <string name="threadmill_network_setting_non_net_operate1_txt">请检查网线是否插好</string>
    <string name="threadmill_network_setting_non_net_operate2_txt">跑步机连接网络，才能刷卡启动跑步机及同步运动数据，并为跑步机系统检查更新</string>
    <string name="threadmill_setup_operate1_txt">点击&#160;&#160;&#160;&#160;选定或取消【访客启动】</string>
    <string name="threadmill_setup_operate2_txt">点击&#160;&#160;&#160;&#160;进入下一步</string>
    <string name="threadmill_bind_gym_operate_txt">点击&#160;&#160;&#160;&#160;返回上一页</string>
    <string name="threadmill_default_parameter_txt">请设置目标参数！</string>
    <string name="threadmill_run_complete_hint">点击&#160;&#160;&#160;&#160;返回待机画面</string>
    <string name="text_await_below"><font color="#85878e">请</font><font color="#34c86c">在下方面板上刷手环处刷手环</font><font color="#85878e">开启跑步机</font></string>
    <string name="welcome_to">Welcome to</string>
    <string name="liking_fit">Liking Fit</string>
    <string name="start"><font color="#AAACAF">请使用下方面板上的相应按钮</font><br></br><font color="#34c86c">快速开始</font><font color="#AAACAF">或</font><font color="#34c86c">设定目标</font></string>
    <string name="category_hint_txt">请在下方面板上按钮选择视频类型</string>
    <string name="videolist_hint_txt">请在下方面板上按钮选择音乐或视频</string>
    <string name="text_setting_below"><font color="#85878e">请</font><font color="#34c86c">在下方面板上按钮</font><font color="#85878e">选择设置类别</font></string>
    <string name="run_pause_click">点击 </string>
    <string name="run_pause_quick_start">QUICK\nSTART</string>
    <string name="run_pause_restart"> 继续运动</string>
    <string name="run_pause_stop">点击 <font color="#25ff8c">STOP</font>完成锻炼</string>
    <string name="run_timeout_1">您目前位于跑步机，快快跑起来吧~</string>
    <string name="run_timeout_2">您必须马上跑起来，排队的小伙伴正在等待，1分钟后若您未进入跑步状态，本次使用将结束</string>
    <string name="run_timeout_3">本次使用结束，谢谢使用</string>
    <string name="run_finish_result_hint_1">恭喜你，完成本次跑步</string>
    <string name="run_finish_result_hint_2">恭喜你，完成背刺跑步</string>
</resources>
