<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="100dp"
        android:orientation="horizontal">

        <com.aaron.android.framework.library.imageloader.HImageView
            xmlns:fresco="http://schemas.android.com/apk/res-auto"
            android:id="@+id/head_imageView"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_gravity="center"
            fresco:failureImage="@drawable/icon_head_default_image"
            fresco:failureImageScaleType="centerCrop"
            fresco:placeholderImage="@drawable/icon_head_default_image"
            fresco:placeholderImageScaleType="centerCrop"
            fresco:roundAsCircle="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/user_name_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/spacing_4dp"
                android:layout_marginLeft="@dimen/spacing_20dp"
                android:text="雷达"
                android:background="@drawable/textview_underline"
                android:textColor="@color/white"
                android:textSize="@dimen/textsize_20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/spacing_4dp"
                android:layout_marginLeft="@dimen/spacing_20dp"
                android:text="@string/start_user_info_txt"
                android:textColor="@color/white"
                android:textSize="@dimen/textsize_16sp"/>

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/start_mode_set"
            android:layout_width="300dp"
            android:layout_height="338dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/start_mode_set"/>

            <TextView
                android:id="@+id/start_mode_set_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/spacing_24dp"
                android:text="@string/start_mode_set_txt"
                android:textColor="@color/white"
                android:textSize="@dimen/textsize_18sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/start_mode_quick_start"
            android:layout_width="300dp"
            android:layout_height="338dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/start_mode_quick_start"/>

            <TextView
                android:id="@+id/start_mode_quick_start_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/spacing_24dp"
                android:text="@string/start_mode_quick_start_txt"
                android:textColor="@color/white"
                android:textSize="@dimen/textsize_18sp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_16dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:gravity="center"
            android:text="使用下方按钮进行选择"
            android:textColor="@color/white"
            android:textSize="@dimen/textsize_20sp"/>
        <ImageView
            android:layout_width="20dp"
            android:layout_height="12.5dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/spacing_20dp"
            android:background="@drawable/start_down_arrow"/>
    </LinearLayout>


</LinearLayout>